# tddLearn

./: CMakeLists.txt  basic1.cpp  deq.cpp  deq.h  deq_test.cpp  deq_test2.cpp  math_test.cpp  minimath.cpp  minimath.h  minimath_test.cpp  mock_sample.cpp  test.cpp  test1-report.xml  trainingNotes.md  wrong.cpp
